--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
         <ul class="nav-links">
             <li><a href="#services">Services</a></li>
             <li><a href="#about">About</a></li>
-            <li><a href="#blog">Insights</a></li>
+            <li><a href="/blog.html">Read More →</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
@@ -446,21 +446,21 @@
             <div class="blog-card">
                 <div class="blog-card-content">
                     <h3>Why 80% of AI Patent Applications Get Rejected (And How To Avoid It)</h3>
-                    <a href="#">Read More &rarr;</a>
+                    <a href="/blog.html">Read More →</a>
                 </div>
             </div>
             
             <div class="blog-card">
                 <div class="blog-card-content">
                     <h3>Inside the USPTO: How Computer-Implemented Inventions Are Actually Examined</h3>
-                    <a href="#">Read More &rarr;</a>
+                    <a href="/blog.html">Read More →</a>
                 </div>
             </div>
             
             <div class="blog-card">
                 <div class="blog-card-content">
                     <h3>Case Study: Overcoming Alice Rejections in Machine Learning Patents</h3>
-                    <a href="#">Read More &rarr;</a>
+                    <a href="/blog.html">Read More →</a>
                 </div>
             </div>
         </div>
@@ -490,7 +490,7 @@
             <a href="#services">Services</a>
             <a href="#about">About</a>
             <a href="#">People</a>
-            <a href="#blog">Insights</a>
+            <a href="#blog">Insights</a> 
             <a href="#contact">Contact</a>
             <a href="#">LinkedIn</a>
         </div>
