--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
     <section id="contact" class="final-cta">
         <h2>Ready to Protect Your Innovation?</h2>
         <p>Schedule a free 30-minute consultation to discuss your invention and patent strategy.</p>
-        <a href="mailto:contact@qedip.com" class="cta-button">Schedule Consultation</a>
+        <a href="https://cal.com/qedip/InitialPatentConsultation" class="cta-button" target="_blank">Schedule Free Consultation</a>
         <p style="margin-top: 1.5rem; font-size: 1rem;">Or email us directly at contact@qedip.com</p>
     </section>
     
