--- a/index.html
+++ b/index.html
@@ -356,7 +356,8 @@
     <section class="hero">
         <h1>Patent Protection for<br>Computer-Implemented Inventions</h1>
         <p>Former USPTO examiner specializing in AI, machine learning, cryptography, and software patents. We've examined hundreds of applications&mdash;now we help technical founders get theirs approved.</p>
-        <a href="#contact" class="cta-button">Schedule Free Consultation</a>
+        <a href="https://cal.com/your-username/patent-consultation" class="cta-button" target="_blank">Schedule Free Consultation</a>
+
         
         <div class="trust-badges">
             <div class="trust-badge">
