--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
     <section class="hero">
         <h1>Patent Protection for<br>Computer-Implemented Inventions</h1>
         <p>Former USPTO examiner specializing in AI, machine learning, cryptography, and software patents. We've examined hundreds of applications&mdash;now we help technical founders get theirs approved.</p>
-        <a href="https://cal.com/your-username" class="cta-button" target="_blank">Schedule Free Consultation</a>
+        <a href="https://cal.com/qedip/InitialPatentConsultation" class="cta-button" target="_blank">Schedule Free Consultation</a>
         
         <div class="trust-badges">
             <div class="trust-badge">
